# ImgView

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  doxygen.conf
cmake/Modules/: FindOpenImageIO.cmake
src/: CMakeLists.txt  GlHelper.cpp  GlHelper.hpp  Image.cpp  Image.hpp  ImageConfig.cpp  ImageConfig.hpp  cmake_install.cmake  imgview.cpp
